--- a/formationService/pom.xml
+++ b/formationService/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.formationService</groupId>
-	<artifactId>formationService</artifactId>
+	<groupId>com.inscriptionService</groupId>
+	<artifactId>inscriptionService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -48,6 +48,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+                
+                <dependency>
+                    <groupId>com.eLearningCommons</groupId>
+                    <artifactId>eLearningCommons</artifactId>
+                    <version>0.0.1-SNAPSHOT</version>
+                </dependency>
 	</dependencies>
 
 	<build>
